# CppProjectTemplate_VSCodeCMakeTools

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt_SafetyFlags_GNU.cmake  CMakeLists.txt_SafetyFlags_MSVC.cmake  CMakeLists.txt_a_Libs.cmake  CMakeLists.txt_a_Project_Libs.cmake  CMakeLists.txt_b_Project_Tests.cmake  CMakeLists.txt_b_Tests.cmake  CMakeLists.txt_c_Project_SafetyFlags_CLANG.cmake  CMakeLists.txt_c_Project_SafetyFlags_GNU.cmake  CMakeLists.txt_c_Project_SafetyFlags_MSVC.cmake  CMakeLists.txt_z_SafetyFlags_CLANG.cmake  CMakeLists.txt_z_SafetyFlags_GNU.cmake  CMakeLists.txt_z_Utils.cmake  CMakeLists.txt_z_Utils_Boost.cmake  CMakeLists.txt_z_Utils_Qt.cmake  CMakeLists.txt_z_Utils_SafetyFlags.cmake  CMakeLists.txt_z_Utils_SetupQt6App.cmake  CMakeLists.txt_z_Utils_SetupQtApp.cmake  CMakeLists.txt_z_Utils_VCRuntime.cmake  README.md  SAFETY_FLAGS_CLANG.cmake  SAFETY_FLAGS_GNU.cmake  SAFETY_FLAGS_MSVC.cmake  conanfile.txt  main.cpp  vcpkg.json
.devcontainer/: Dockerfile_debian_clang-19  devcontainer.json  docker-compose.user_debian_clang-19.yaml
.devcontainer_disabled/: Dockerfile_clang-19  devcontainer.json  docker-compose.user_clang-19.yaml
lib/libcppinfo/: CMakeLists.txt
lib/libcppinfo/src/: cppinfo.cpp
lib/libproject_version/: CMakeLists.txt
lib/libproject_version/include/: project_version.hpp
lib/libproject_version/src/: project_version.cpp
lib/libproject_version/test/: test_project_version.cpp
lib/libzexample/: CMakeLists.txt
lib/libzexample/src/: libexample.cpp
lib/libzexample/test/: test_libexample_BoostUnitTest.cpp  test_libexample_GTest.cpp
lib/somelib/: CMakeLists.txt
lib/somelib/include/: cppinfo.hpp  somelib.hpp
lib/somelib/src/: somelib.cpp
lib/somelib/test/: test_SomeLib_BoostUnitTest.cpp  test_SomeLib_GTest.cpp  test_somelib_2.cpp
src/: main.cpp
test/: test_Main_BoostUnitTest.cpp  test_Main_GTest.cpp  test_UCMakeSkeleton.cpp  test_UCMakeSkeleton_2.cpp
test_cpp_snippets/: test_cpprunner_snippet.cpp
